Fixed why start button was not showing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
 box-sizing: border-box;
-font-family: Arial, Helvetica, sans-serif
+font-family: Arial, Helvetica, sans-serif;
 }
 
 :root {
@@ -46,7 +46,7 @@ body.wrong {
 }
 
 .btn {
-    --hue:var(--hue-neutral);
+    --hue: var(--hue-neutral);
     border: 1px solid hsl(var(--hue), 100%, 30%);
     background-color: hsl(var(--hue), 100%, 50%);
     border-radius: 5px;
